// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements added to cart onClick add to cart 1`] = `
<div
  class="container"
>
  <div
    class="row"
  >
    <div
      class="col"
    >
      <div
        class="itemList"
      >
        <div
          class="card"
          style="width: 175px; margin: 10px;"
        >
          <div
            class="card-body"
          >
            <div
              class="card-title h5"
            >
              Face Mask
            </div>
            <p
              class="card-text"
            >
              2.5
               / 
              each
            </p>
            <button
              class="btn btn-primary"
              type="button"
            >
              Add to cart
            </button>
          </div>
        </div>
        <div
          class="card"
          style="width: 175px; margin: 10px;"
        >
          <div
            class="card-body"
          >
            <div
              class="card-title h5"
            >
              Toilet Paper
            </div>
            <p
              class="card-text"
            >
              0.65
               / 
              roll
            </p>
            <button
              class="btn btn-primary"
              type="button"
            >
              Add to cart
            </button>
          </div>
        </div>
        <div
          class="card"
          style="width: 175px; margin: 10px;"
        >
          <div
            class="card-body"
          >
            <div
              class="card-title h5"
            >
              Hand Sanitizer
            </div>
            <p
              class="card-text"
            >
              19.99
               / 
              liter
            </p>
            <button
              class="btn btn-primary"
              type="button"
            >
              Add to cart
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="col-lg-5 col"
    >
      <div>
        Your cart is empty
      </div>
    </div>
  </div>
</div>
`;

exports[`elements added to cart onClick add to cart 2`] = `
<div
  class="container"
>
  <div
    class="row"
  >
    <div
      class="col"
    >
      <div
        class="itemList"
      >
        <div
          class="card"
          style="width: 175px; margin: 10px;"
        >
          <div
            class="card-body"
          >
            <div
              class="card-title h5"
            >
              Face Mask
            </div>
            <p
              class="card-text"
            >
              2.5
               / 
              each
            </p>
            <button
              class="btn btn-primary"
              type="button"
            >
              Add to cart
            </button>
          </div>
        </div>
        <div
          class="card"
          style="width: 175px; margin: 10px;"
        >
          <div
            class="card-body"
          >
            <div
              class="card-title h5"
            >
              Toilet Paper
            </div>
            <p
              class="card-text"
            >
              0.65
               / 
              roll
            </p>
            <button
              class="btn btn-primary"
              type="button"
            >
              Add to cart
            </button>
          </div>
        </div>
        <div
          class="card"
          style="width: 175px; margin: 10px;"
        >
          <div
            class="card-body"
          >
            <div
              class="card-title h5"
            >
              Hand Sanitizer
            </div>
            <p
              class="card-text"
            >
              19.99
               / 
              liter
            </p>
            <button
              class="btn btn-primary"
              type="button"
            >
              Add to cart
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="col-lg-5 col"
    >
      <table
        class="table table-sm"
      >
        <thead>
          <tr
            class="bold"
          >
            <th
              colspan="4"
            >
              Title
            </th>
            <th>
              Price
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              Face Mask
            </td>
            <td />
            <td>
              2.5
              /
              each
            </td>
            <td>
              <button
                class="btn btn-primary btn-sm"
                type="button"
              >
                Remove
              </button>
            </td>
            <td>
              2.5
            </td>
          </tr>
          <tr
            class="bold"
          >
            <td
              colspan="4"
            >
              Sub-total:
            </td>
            <td>
              £
              2.5
            </td>
          </tr>
          <tr
            class="bold"
          >
            <td
              colspan="5"
            >
              Savings
            </td>
          </tr>
          <tr
            class="bold"
          >
            <td
              colspan="4"
            >
              Total Savings:
            </td>
            <td>
              0
            </td>
          </tr>
          <tr
            class="bold"
          >
            <td
              colspan="4"
            >
              Total to Pay:
            </td>
            <td>
              £
              2.5
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`elements added to cart onClick add to cart 3`] = `
<div
  class="container"
>
  <div
    class="row"
  >
    <div
      class="col"
    >
      <div
        class="itemList"
      >
        <div
          class="card"
          style="width: 175px; margin: 10px;"
        >
          <div
            class="card-body"
          >
            <div
              class="card-title h5"
            >
              Face Mask
            </div>
            <p
              class="card-text"
            >
              2.5
               / 
              each
            </p>
            <button
              class="btn btn-primary"
              type="button"
            >
              Add to cart
            </button>
          </div>
        </div>
        <div
          class="card"
          style="width: 175px; margin: 10px;"
        >
          <div
            class="card-body"
          >
            <div
              class="card-title h5"
            >
              Toilet Paper
            </div>
            <p
              class="card-text"
            >
              0.65
               / 
              roll
            </p>
            <button
              class="btn btn-primary"
              type="button"
            >
              Add to cart
            </button>
          </div>
        </div>
        <div
          class="card"
          style="width: 175px; margin: 10px;"
        >
          <div
            class="card-body"
          >
            <div
              class="card-title h5"
            >
              Hand Sanitizer
            </div>
            <p
              class="card-text"
            >
              19.99
               / 
              liter
            </p>
            <button
              class="btn btn-primary"
              type="button"
            >
              Add to cart
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="col-lg-5 col"
    >
      <div>
        Your cart is empty
      </div>
    </div>
  </div>
</div>
`;

exports[`renders App component 1`] = `
<div
  class="container"
>
  <div
    class="row"
  >
    <div
      class="col"
    >
      <div
        class="itemList"
      >
        <div
          class="card"
          style="width: 175px; margin: 10px;"
        >
          <div
            class="card-body"
          >
            <div
              class="card-title h5"
            >
              Face Mask
            </div>
            <p
              class="card-text"
            >
              2.5
               / 
              each
            </p>
            <button
              class="btn btn-primary"
              type="button"
            >
              Add to cart
            </button>
          </div>
        </div>
        <div
          class="card"
          style="width: 175px; margin: 10px;"
        >
          <div
            class="card-body"
          >
            <div
              class="card-title h5"
            >
              Toilet Paper
            </div>
            <p
              class="card-text"
            >
              0.65
               / 
              roll
            </p>
            <button
              class="btn btn-primary"
              type="button"
            >
              Add to cart
            </button>
          </div>
        </div>
        <div
          class="card"
          style="width: 175px; margin: 10px;"
        >
          <div
            class="card-body"
          >
            <div
              class="card-title h5"
            >
              Hand Sanitizer
            </div>
            <p
              class="card-text"
            >
              19.99
               / 
              liter
            </p>
            <button
              class="btn btn-primary"
              type="button"
            >
              Add to cart
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="col-lg-5 col"
    >
      <div>
        Your cart is empty
      </div>
    </div>
  </div>
</div>
`;
